objects/TimeZone_Indicator__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping the garage zip code ranges to Timezone</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_Abbreviation__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: The abbreviation of the time zone when daylight savings time applies, such as PDT, MDT, CDT, and EDT.</description>
        <label>DST Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <inlineHelpText>Format hh:mm:ss</inlineHelpText>
        <label>From</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_From_With_Daylight_Saving__c</fullName>
        <inlineHelpText>Format hh:mm:ss</inlineHelpText>
        <label>GMT From With Daylight Saving</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_From_Without_Daylight_Saving__c</fullName>
        <inlineHelpText>Format hh:mm:ss</inlineHelpText>
        <label>GMT From Without Daylight Saving</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_Till_With_Daylight_Saving__c</fullName>
        <inlineHelpText>Format hh:mm:ss</inlineHelpText>
        <label>GMT Till With Daylight Saving</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_Till_Without_Daylight_Saving__c</fullName>
        <inlineHelpText>Format hh:mm:ss</inlineHelpText>
        <label>GMT Till Without Daylight Saving</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Higher_Range_of_Zip_Code__c</fullName>
        <label>Higher Range of Zip Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lower_Range_of_Zip_Code__c</fullName>
        <label>Lower Range of Zip Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observe_Daylight_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Observe Daylight Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Abbreviation__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: The abbreviation of the time zone while in standard time, such as PST, MST, CST, and EST.</description>
        <label>Standard Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_GMT_Offset__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Hours offset from GMT so the correct local date and time of the repo may be established from the provided recovery date/time in GMT format from iRepo.</description>
        <label>Standard GMT Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Till__c</fullName>
        <inlineHelpText>Format hh:mm:ss</inlineHelpText>
        <label>Till</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone_Indicator__c</fullName>
        <label>Timezone Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: The closest representation in terms of GMT offset of the time zone that Salesforce maintains as a user-selectable time zone on their detail record, i.e. America/Los_Angeles, America/Denver, America/Chicago, and America/New_York.</description>
        <label>Timezone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>TimeZone Indicator</label>
</CustomObject>